# who-should-be-fined

./: .gitignore  .gitmodules  Makefile  README.md  macro.tex  wsbf.aux  wsbf.bib  wsbf.out  wsbf.tex
FastOT/: Keccak-simple.c  Makefile  README.md  crypto_hash.h  fe25519.h  fe25519_pack.c  fe25519_sub.c  fe25519_unpack.c  ge25519_lookup_niels.s  ge25519_pack.c  ge25519_scalarmult.c  ge25519_scalarmult_base.c  ge25519_unpack.c  ge4x.c  ge4x.data  ge4x_pack.c  ge4x_unpack_vartime.c  gfe4x.c  network.c  network.h  ot_receiver.c  ot_receiver_test.c  ot_sender.c  ot_sender_test.c  sc25519.h  sc25519_from32bytes.c  sc25519_random.c
datasets/: forAFile.txt  forBFile.txt  forCFile.txt  shuffled.txt
ledger/: file-handler.cpp  file-handler.hpp  ledger.cpp  ledger.hpp  record.cpp  record.hpp
official_exams/: CMakeLists.txt  otmain.h  simple-ot-receiver.cpp  simple-ot-sender.cpp  test.h
sections/: OT.tex  allocation.tex  detection.tex  insights.tex  introduction.tex  ledger.tex  motivation.tex  overview.tex  relatedwork.tex
src/: CMakeLists.txt  file-handler-test.cpp  file-handler.cpp  file-handler.hpp  heatmap.txt  ledger.hpp  shuffledListAfterStrip.txt
